gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b15875.d
version https://git-lfs.github.com/spec/v1
oid sha256:a7ca0ff351c93da1f133de9542af5320a1707dad52b0b25c3c787db0129de546
size 287
